kafka producer qo'shildi
