# api/docs/swagger.json
@@ -480,7 +480,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/budgeting.UpdateBudgetResp"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "400": {
@@ -1190,7 +1190,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/budgeting.CreateTransactionResp"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "400": {
@@ -1619,27 +1619,12 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.AccountType"
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
                 }
             }
-        },
-        "budgeting.AccountType": {
-            "type": "integer",
-            "enum": [
-                0,
-                1,
-                2,
-                3
-            ],
-            "x-enum-varnames": [
-                "AccountType_CHECKING",
-                "AccountType_SAVINGS",
-                "AccountType_CREDIT_CARD",
-                "AccountType_CASH"
-            ]
         },
         "budgeting.Budget": {
             "type": "object",
@@ -1657,7 +1642,7 @@
                     "type": "string"
                 },
                 "period": {
-                    "$ref": "#/definitions/budgeting.Period"
+                    "type": "string"
                 },
                 "start_date": {
                     "type": "string"
@@ -1677,23 +1662,12 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.CategoryType"
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
                 }
             }
-        },
-        "budgeting.CategoryType": {
-            "type": "integer",
-            "enum": [
-                0,
-                1
-            ],
-            "x-enum-varnames": [
-                "CategoryType_INCOME",
-                "CategoryType_EXPENSE"
-            ]
         },
         "budgeting.CreateAccountReq": {
             "type": "object",
@@ -1708,7 +1682,7 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.AccountType"
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
@@ -1739,7 +1713,7 @@
                     "type": "string"
                 },
                 "period": {
-                    "$ref": "#/definitions/budgeting.Period"
+                    "type": "string"
                 },
                 "start_date": {
                     "type": "string"
@@ -1767,7 +1741,7 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.CategoryType"
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
@@ -1798,7 +1772,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "$ref": "#/definitions/budgeting.Status"
+                    "type": "string"
                 },
                 "target_amount": {
                     "type": "number"
@@ -1841,20 +1815,9 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.TypeTrnsaction"
+                    "type": "string"
                 },
                 "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "budgeting.CreateTransactionResp": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "status": {
                     "type": "string"
                 }
             }
@@ -1930,7 +1893,7 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.AccountType"
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
@@ -1973,7 +1936,7 @@
                     "type": "string"
                 },
                 "period": {
-                    "$ref": "#/definitions/budgeting.Period"
+                    "type": "string"
                 },
                 "start_date": {
                     "type": "string"
@@ -2033,7 +1996,7 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.CategoryType"
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
@@ -2056,7 +2019,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "$ref": "#/definitions/budgeting.Status"
+                    "type": "string"
                 },
                 "target_amount": {
                     "type": "number"
@@ -2108,7 +2071,7 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.TypeTrnsaction"
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
@@ -2151,7 +2114,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "$ref": "#/definitions/budgeting.Status"
+                    "type": "string"
                 },
                 "target_amount": {
                     "type": "number"
@@ -2160,34 +2123,6 @@
                     "type": "string"
                 }
             }
-        },
-        "budgeting.Period": {
-            "type": "integer",
-            "enum": [
-                0,
-                1,
-                2,
-                3
-            ],
-            "x-enum-varnames": [
-                "Period_DAILY",
-                "Period_WEEKLY",
-                "Period_MONTHLY",
-                "Period_YEARLY"
-            ]
-        },
-        "budgeting.Status": {
-            "type": "integer",
-            "enum": [
-                0,
-                1,
-                2
-            ],
-            "x-enum-varnames": [
-                "Status_INPORGRESS",
-                "Status_ACHIEVED",
-                "Status_FAILED"
-            ]
         },
         "budgeting.Transaction": {
             "type": "object",
@@ -2211,23 +2146,12 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.TypeTrnsaction"
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
                 }
             }
-        },
-        "budgeting.TypeTrnsaction": {
-            "type": "integer",
-            "enum": [
-                0,
-                1
-            ],
-            "x-enum-varnames": [
-                "TypeTrnsaction_INCOME",
-                "TypeTrnsaction_EXPENSE"
-            ]
         },
         "budgeting.UpdateAccountReq": {
             "type": "object",
@@ -2245,7 +2169,7 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.AccountType"
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
@@ -2279,20 +2203,9 @@
                     "type": "string"
                 },
                 "period": {
-                    "$ref": "#/definitions/budgeting.Period"
+                    "type": "string"
                 },
                 "start_date": {
-                    "type": "string"
-                }
-            }
-        },
-        "budgeting.UpdateBudgetResp": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "status": {
                     "type": "string"
                 }
             }
@@ -2310,7 +2223,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "$ref": "#/definitions/budgeting.Status"
+                    "type": "string"
                 },
                 "target_amount": {
                     "type": "number"
@@ -2344,7 +2257,7 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/budgeting.TypeTrnsaction"
+                    "type": "string"
                 }
             }
         },
@@ -2370,6 +2283,17 @@
                 },
                 "status": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.Response": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
